# flappy-nes

./: .gitattributes  CMakeLists.txt  ca65-6502-nes-toolchain.cmake  rom.cfg
data/: base.chr
data/nesst/: base.nss
data/pages/: page0.chr  page1.chr  page10.chr  page11.chr  page12.chr  page13.chr  page14.chr  page15.chr  page16.chr  page17.chr  page18.chr  page19.chr  page2.chr  page20.chr  page21.chr  page22.chr  page23.chr  page24.chr  page25.chr  page26.chr  page27.chr  page28.chr  page29.chr  page3.chr  page30.chr  page31.chr  page4.chr  page5.chr  page6.chr  page7.chr  page8.chr  page9.chr
data/scripts/: detect_duplicates.py  dup.txt  generate_chr_banks.py  lfsr_lut.py
gfx/: background.xcf  bird.xcf  floor.xcf  pipes.xcf  score.xcf
inc/: gamestates.inc  registers.inc
src/: bird.s  boot.s  decimal.s  dynamic-sprites.s  ground.s  highscore.s  main.s  random.s  rom-header.s  screen-game-over.s  screen-game.s  screen-instructions.s  screen-main-menu.s  screen-restore.s  screen-transition.s
